# external_dns_host_webhook_provider

./: .dockerignore  Cargo.toml  Dockerfile  renovate.json
.github/workflows/: delete-devel-images.yml  devel.yml  publish.yml  release.yml
source/src/: lib.rs  main.rs
src/: config.rs  health.rs  hosts.rs  lib.rs  main.rs  records.rs
