[package]
name = "host_webhook_provider"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.17", features = ["derive", "env"] }
once_cell = "1.19.0"
salvo = { version = "0.71.1", features = ["logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full" ] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
