[package]
name = "host_webhook_provider"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "host_webhook_provider"
path = "src/main.rs"

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
clap = { version = "4.5.17", features = ["derive", "env"] }
salvo = { version = "0.72.0", features = ["logging"] }
tokio = { version = "1", features = ["full" ] }
regex = "1.10.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"

